[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/hslider_grabber.png" type="Texture" id=3]
[ext_resource path="res://Images/hslider_grabber_hl.png" type="Texture" id=4]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;
uniform float amount : hint_range(0,10);
void fragment() {
    COLOR.rgb = textureLod(SCREEN_TEXTURE,SCREEN_UV,amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/amount = 3.0

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="fullscreen_panel" type="Panel" parent="ColorRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -265.0
margin_top = 30.0
margin_right = 263.0
margin_bottom = 73.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="fullscreen" type="Label" parent="ColorRect/fullscreen_panel"]
margin_top = 7.0
margin_right = 180.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "FULLSCREEN:"
align = 2

[node name="fullscreen_button" type="Button" parent="ColorRect/fullscreen_panel"]
margin_left = 190.0
margin_right = 333.0
margin_bottom = 43.0
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
toggle_mode = true
text = "TOGGLE"

[node name="volume_panel" type="Panel" parent="ColorRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -265.0
margin_top = 90.0
margin_right = 263.0
margin_bottom = 133.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="volume" type="Label" parent="ColorRect/volume_panel"]
margin_top = 7.0
margin_right = 183.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "MASTER VOLUME:"
align = 2

[node name="volume_mute" type="Button" parent="ColorRect/volume_panel"]
margin_left = 190.0
margin_right = 333.0
margin_bottom = 43.0
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
toggle_mode = true
text = "MUTE"

[node name="volume_slider" type="HSlider" parent="ColorRect/volume_panel"]
margin_left = 345.0
margin_top = 10.0
margin_right = 528.0
margin_bottom = 30.0
focus_mode = 0
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 13 )
min_value = -100.0
max_value = 0.0
focus_mode = 0

[node name="debug_panel" type="Panel" parent="ColorRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -265.0
margin_top = 150.0
margin_right = 263.0
margin_bottom = 193.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="debug" type="Label" parent="ColorRect/debug_panel"]
margin_top = 7.0
margin_right = 180.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "DEBUG MODE:"
align = 2

[node name="debug_button" type="Button" parent="ColorRect/debug_panel"]
margin_left = 190.0
margin_right = 333.0
margin_bottom = 43.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
toggle_mode = true
text = "TOGGLE"

[node name="vsync_panel" type="Panel" parent="ColorRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -265.0
margin_top = 210.0
margin_right = 263.0
margin_bottom = 253.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="vsync" type="Label" parent="ColorRect/vsync_panel"]
margin_top = 7.0
margin_right = 180.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "V-SYNC:"
align = 2

[node name="vsync_button" type="Button" parent="ColorRect/vsync_panel"]
margin_left = 190.0
margin_right = 333.0
margin_bottom = 43.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
toggle_mode = true
pressed = true
text = "TOGGLE"

[node name="res_panel" type="Panel" parent="ColorRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -265.0
margin_top = 270.0
margin_right = 263.0
margin_bottom = 373.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="width" type="Label" parent="ColorRect/res_panel"]
margin_top = 7.0
margin_right = 180.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "WIDTH:"
align = 2

[node name="width_edit" type="LineEdit" parent="ColorRect/res_panel"]
margin_left = 190.0
margin_right = 333.0
margin_bottom = 43.0
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 8 )
custom_colors/selection_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/cursor_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "1280"
align = 1
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "1280"

[node name="height" type="Label" parent="ColorRect/res_panel"]
margin_top = 67.0
margin_right = 180.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "HEIGHT:"
align = 2

[node name="height_edit" type="LineEdit" parent="ColorRect/res_panel"]
margin_left = 190.0
margin_top = 60.0
margin_right = 333.0
margin_bottom = 103.0
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 8 )
custom_colors/selection_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/cursor_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "720"
align = 1
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "720"

[node name="apply_button" type="Button" parent="ColorRect/res_panel"]
margin_left = 345.0
margin_top = 30.0
margin_right = 488.0
margin_bottom = 73.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
toggle_mode = true
text = "APPLY"

[node name="back" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.5
margin_top = -60.0
margin_right = 71.5
margin_bottom = -17.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
toggle_mode = true
text = "BACK"

[node name="version" type="Label" parent="ColorRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -40.0
margin_right = 96.0
margin_bottom = -13.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "ver. 1.1"
[connection signal="toggled" from="ColorRect/fullscreen_panel/fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
[connection signal="toggled" from="ColorRect/volume_panel/volume_mute" to="." method="_on_volume_mute_toggled"]
[connection signal="value_changed" from="ColorRect/volume_panel/volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="ColorRect/debug_panel/debug_button" to="." method="_on_debug_button_toggled"]
[connection signal="toggled" from="ColorRect/vsync_panel/vsync_button" to="." method="_on_vsync_button_toggled"]
[connection signal="text_changed" from="ColorRect/res_panel/width_edit" to="." method="_on_width_edit_text_changed"]
[connection signal="text_changed" from="ColorRect/res_panel/height_edit" to="." method="_on_height_edit_text_changed"]
[connection signal="pressed" from="ColorRect/res_panel/apply_button" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="ColorRect/back" to="." method="_on_back_pressed"]
